--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "primeng/resources/themes/mdc-dark-deeppurple/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
+            
             "scripts": []
           },
           "configurations": {
